tests/NormalTests/paczka1/fuzzy1/88708922.err
Error in line 4: al8fit A222 88,0
Error in line 7: Vxaq7Tn6T A133 39,1
Error in line 13: ffq S918 14,8
Error in line 11: YmJar04y3 A222 44,3
Error in line 17: YmJar04y3 A133 21,2
Error in line 19: al8fit S918 7,6
Error in line 30: YmJar04y3 A222 87,8
